Remove fotos duplicadas

--- a/src/app/pages/bio/bio.component.html
+++ b/src/app/pages/bio/bio.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-12 col-lg-6 offset-lg-1">
         <div class="blog-img wow fadeInRight">
-          <img src="architect-studio/img/blog1.png" alt="blog-img">
+          <img src="assets/img/mon4.JPG" alt="blog-img">
         </div>
       </div>
     </div>
@@ -28,21 +28,18 @@
             <div class="testimonial-details wow fadeInLeft">
               <h4 class="heading">MI BIO</h4>
               <p class="text">
-                Monserrat Guerra es una agente de bienes raíces con una gran pasión por ayudar a las personas a
-                encontrar la casa de sus sueños. Nacida en la ciudad de México, creció en un hogar humilde y aprendió
-                desde temprana edad la importancia del trabajo duro y la perseverancia.
-              </p>
-              <p class="text">
-                Hoy en día, Monserrat es una agente de bienes raíces altamente respetada y reconocida en su comunidad, y
-                ha ayudado a muchas familias a encontrar la casa de sus sueños. Su dedicación y experiencia han hecho
-                que muchos de sus clientes la recomienden a amigos y familiares, lo que ha llevado a un gran éxito en su
-                carrera.
+                Soy Monserrat Guerra, una mujer profesional de 26 años con una experiencia de más de 8 años en ventas y excelentes dotes para liderar y consolidar equipos.
+                Con conocimientos especializados para identificar oportunidades de negocio, optimizar procesos y maximizar la rentabilidad.
                 <br>
-                Además de su trabajo en bienes raíces, Monserrat también es una ávida defensora de la educación y la
-                igualdad de oportunidades. Ha participado en varias organizaciones sin fines de lucro que buscan mejorar
-                la vida de las personas y comunidades más vulnerables. Monserrat es un verdadero ejemplo de cómo la
-                determinación, la perseverancia y el compromiso con los demás pueden llevar a un éxito verdadero y
-                duradero en cualquier campo.
+                <br>
+                Soy versátil y capaz de simultanear varias tareas. Con amplia experiencia en entornos laborales en los que se valora el compromiso y la capacidad de trabajar en equipo.
+                Me caracterizo por mi dinamismo, proactividad y entusiasmo.
+                <br>
+                <br>
+                Poseo amplios conocimientos en ventas enfocadas a la península Yucateca, bienes raíces para ser exacta, ayude a crecer Grupo López Rosa como Gerente de ventas en CDMX con desarrollos en Yucatán México, decido independizarme crear mi propia inmobiliaria con todo el conocimiento adquirido y con todo el respaldo de la empresa desarrolladora y el equipo formado en ventas.
+                <br>
+                <br>
+                Así que, ¡estimado inversionista! quiero que sepas que estás en las mejores manos, te ayudaremos a incrementar tu patrimonio, aumentar tus ganancias y asesorarte en el mundo de las inversiones.
               </p>
             </div>
           </div>
